--- a/test/index.html
+++ b/test/index.html
@@ -5,9 +5,64 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Mocha Spec Runner</title>
     <link rel="stylesheet" href="lib/mocha/mocha.css">
+    
 </head>
 <body>
     <div id="mocha"></div>
+
+    <div class="container">
+            <div class="header">
+                <ul class="nav nav-pills pull-right">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+                <h3 class="text-muted">bluecube</h3>
+            </div>
+ 
+            <div class="row">
+                <div class="col-md-4 sidebar">
+                    <button type="button" class="btn btn-default btn-block new">New To-Do <span class="glyphicon glyphicon-pencil"></span></button>
+ 
+                    <ul class="notes"></ul>
+                </div>
+ 
+                <div class="col-md-5 main">
+                    <!-- Post form -->
+                    <form class="form-horizontal form" role="form">
+                      <!-- title -->
+                      <div class="form-group">
+                        <label for="title" class="col-lg-2 control-label">To-Do</label>
+                        <div class="col-lg-10">
+                          <input type="email" class="form-control" id="title" placeholder="Post To-Do here...">
+                        </div>
+                      </div>
+ 
+                      <!-- content  -->
+                      <div class="form-group">
+                        <label for="content" class="col-lg-2 control-label">Description</label>
+                        <div class="col-lg-10">
+                          <textarea id="content" class="form-control" placeholder="Detailed description of To-Do goes here..."></textarea>
+                        </div>
+                      </div>
+                    </form>
+ 
+                </div>
+ 
+                <div class="col-md-3 actions">
+                    <button type="submit" class="btn btn-default btn-block save">Save</button>
+                </div>
+            </div>
+ 
+ 
+            <div class="footer">
+                <p>♥ from the Yeoman team</p>
+            </div>
+ 
+        </div>
+
+
+
     <script src="lib/mocha/mocha.js"></script>
     <script>mocha.setup('bdd')</script>
     <!-- assertion framework -->
@@ -18,6 +73,7 @@
 
     <!-- include spec files here... -->
     <script src="spec/test.js"></script>
+    <script src="script/main.js"></script>
 
     <script>mocha.run()</script>
 </body>
