--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
         <div class="container">
             <div class="header">
                 
-                <h3 class="text-muted">SmartTask</h3>
+                <h3 class="text-muted">MOPPER&copy2013</h3>
             </div>
         </div> 
         
