--- a/app/index.html
+++ b/app/index.html
@@ -54,6 +54,11 @@
             </div>
         </div>
 
+        
+        <!-- bower:js -->
+        <script src="bower_components/jquery/jquery.js"></script>
+        <!-- endbower -->
+        
  
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
