--- a/test/index.html
+++ b/test/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="lib/mocha/mocha.css">
 
 
-     
+     <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>bluecube</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
