--- a/app/index.html
+++ b/app/index.html
@@ -73,24 +73,24 @@
         <!-- endbower -->
         
  
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. 
         <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject}=l,b[l]||(b[l]=
+            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date,
             e=o.createElement(i);r=o.getElementsByTagName(i)[0];
             e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+            r.parentNode.insertBefore(e,r)}('window','document','script','ga'));
             ga('create','UA-XXXXX-X');ga('send','pageview');
         </script>
-
+        -->
  
         <!-- build:js scripts/main.js -->
         <script src="scripts/main.js"></script>
         <!-- endbuild -->
  
-        <!-- build:js(.tmp) scripts/coffee.js -->
+        <!-- build:js(.tmp) scripts/coffee.js 
         <script src="scripts/hello.js"></script>
-        <!-- endbuild -->
+        endbuild -->
  
         
     </body>
