--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
         <!-- endbuild -->
  
         <script src="http://www.parsecdn.com/js/parse-1.2.10.min.js" type="text/javascript"></script>
- 
+        <script src="scripts/main.js"></script>
     </head>
     <body>
         <!--[if lt IE 10]>
@@ -67,7 +67,7 @@
 
         
         <!-- bower:js -->
-        <script src="bower_components/jquery/jquery.js"></script>
+        <script src="scripts/bower_components/jquery/jquery.js"></script>
         <!-- endbower -->
         
  
